INCLUDE_DIRECTORIES(../include)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
FILE(GLOB_RECURSE INCS ${PROJECT_SOURCE_DIR}/include/*.h)
FILE(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*.c)
SOURCE_GROUP("Header Files" FILES ${INCS})
SOURCE_GROUP("Source Files" FILES ${SRCS})
ADD_EXECUTABLE(JobShop ${SRCS} ${INCS})
